RENDEZVOUS-52 : module appointment alert

--- a/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_en.properties
@@ -36,3 +36,8 @@ message.error.notifyTypeEmpty= Notify email and notify sms is empty, please sele
 message.error.notifyTextEmpty=Text message is empty
 message.error.statusIsEmpty = The field state is empty
 message.error.numberPhoneEmpty = The phone number is empty
+
+##################################################################################
+#DAEMON
+daemon.appointmentAppointmentReminderDaemon.description= Daemon to reminder people about their appointments
+daemon.appointmentAppointmentReminderDaemon.name=Daemon reminder appointments
