--- a/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_fr.properties
@@ -37,3 +37,8 @@ message.error.notifyTextEmpty= Le texte du message est vide
 message.error.statusIsEmpty = Le champ de statut est obligatoire
 message.error.numberPhoneEmpty = Le champ de téléphone est vide
 
+##################################################################################
+#DAEMON
+daemon.appointmentAppointmentReminderDaemon.description= Daemon d'envoi des rappels des rendez-vous.
+daemon.appointmentAppointmentReminderDaemon.name=Daemon d'envoi des rappels des rendez-vous.
+
