RENDEZVOUS-52 : debug update state

--- a/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_en.properties
@@ -24,7 +24,7 @@ task_notify_reminder.labelTextDateAppointment= appointment data
 task_notify_reminder.labelTextTimeAppointment= appointment time
 task_notify_reminder.labelTextLocalisation= location of the appointment
 task_notify_reminder.labelTextUrlCancel= the link to cancel an appointment
-
+task_notify_reminder.button.apply = Apply
 
 task_notify_reminder.mailSenderName = Mairie de Paris
 ################################################################################
@@ -39,5 +39,6 @@ message.error.numberPhoneEmpty = The phone number is empty
 
 ##################################################################################
 #DAEMON
-daemon.appointmentAppointmentReminderDaemon.description= Daemon to reminder people about their appointments
-daemon.appointmentAppointmentReminderDaemon.name=Daemon reminder appointments
+daemon.AppointmentReminderDaemon.description= Daemon to reminder people about their appointments
+daemon.AppointmentReminderDaemon.name=Daemon reminder appointments
+
