--- a/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_fr.properties
@@ -24,7 +24,7 @@ task_notify_reminder.labelTextDateAppointment= la date du RDV.
 task_notify_reminder.labelTextTimeAppointment= l'heure du RDV.
 task_notify_reminder.labelTextLocalisation= le lieu du RDV.
 task_notify_reminder.labelTextUrlCancel= le lien pour annuler le RDV.
-
+task_notify_reminder.button.apply = Appliquer
 
 task_notify_reminder.mailSenderName = Mairie de Paris
 ################################################################################
@@ -39,6 +39,5 @@ message.error.numberPhoneEmpty = Le champ de téléphone est vide
 
 ##################################################################################
 #DAEMON
-daemon.appointmentAppointmentReminderDaemon.description= Daemon d'envoi des rappels des rendez-vous.
-daemon.appointmentAppointmentReminderDaemon.name=Daemon d'envoi des rappels des rendez-vous.
-
+daemon.AppointmentReminderDaemon.description= Daemon d'envoi des rappels des rendez-vous.
+daemon.AppointmentReminderDaemon.name=Daemon d'envoi des rappels des rendez-vous.
