RENDEZVOUS-52 :fix sms textArea length

--- a/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_en.properties
@@ -16,7 +16,8 @@ task_notify_reminder.labelTextSmsAlert=Sms notification
 task_notify_reminder.labelState = Arrival state
 task_notify_reminder.labelTextSubject= Subject
 task_notify_reminder.labelTel=Phone number
-task_notify_reminder.labelTextAlertAppointment = Text notification 
+task_notify_reminder.labelTextEmailAlertAppointment = Text reminder (email) 
+task_notify_reminder.labelTextSmsAlertAppointment = Text reminder (sms) 
 task_notify_reminder.labelTextAlertAppointmentHelp=In the above text, you can use the following variables :
 task_notify_reminder.labelTextFirstName= first name of person
 task_notify_reminder.labelTextLastName= last name of person.
@@ -33,7 +34,8 @@ message.error.subjectIsEmpty= The field subject is mandatory
 message.error.alerttimeNoValid = Field time to alert is not valid.
 message.error.nbAlertsNoValid = Field time before is not valid
 message.error.notifyTypeEmpty= Notify email and notify sms is empty, please select one
-message.error.notifyTextEmpty=Text message is empty
+message.error.notifyEmailTextEmpty= Text email is emty
+message.error.notifySmsTextEmpty= Text sms is empty
 message.error.statusIsEmpty = The field state is empty
 message.error.numberPhoneEmpty = The phone number is empty
 
