--- a/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/genericalert/resources/genericalert_messages_fr.properties
@@ -16,7 +16,8 @@ task_notify_reminder.labelTextSmsAlert=Notification par Sms
 task_notify_reminder.labelState = Etat de sortie
 task_notify_reminder.labelTextSubject= Objet de rappel
 task_notify_reminder.labelTel= Numéro de téléphone
-task_notify_reminder.labelTextAlertAppointment = Texte du rappel 
+task_notify_reminder.labelTextEmailAlertAppointment = Texte du rappel (email) 
+task_notify_reminder.labelTextSmsAlertAppointment = Texte du rappel (sms) 
 task_notify_reminder.labelTextAlertAppointmentHelp=Dans le texte de rappel de rendez-vous, vous pouvez utiliser les variables suivantes :
 task_notify_reminder.labelTextFirstName= le pr\u00e9nom de la personne.
 task_notify_reminder.labelTextLastName= le nom de la personne.
@@ -33,7 +34,8 @@ message.error.subjectIsEmpty= Le champ d'objet du rappel est obligatoire
 message.error.alerttimeNoValid = Le champ du temps avant alerte n'est pas valide
 message.error.nbAlertsNoValid = Le champ nombre d'alerts n'est pas valide
 message.error.notifyTypeEmpty = Type de notification n'est pas renseigné
-message.error.notifyTextEmpty= Le texte du message est vide
+message.error.notifyEmailTextEmpty= Le texte du corps d'email est vide
+message.error.notifySmsTextEmpty= Le texte du sms est vide
 message.error.statusIsEmpty = Le champ de statut est obligatoire
 message.error.numberPhoneEmpty = Le champ de téléphone est vide
 
